name:                analog
version:             0.1.0
synopsis:            CLI tool to search for large delays in framework.log
homepage:            https://github.com/jhrcek/analog
license:             BSD3
license-file:        LICENSE
author:              Jan Hrcek
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable analog
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , time
  ghc-options:        -Wall -O2
  default-language:    Haskell2010
